<resources>
    <string name="app_name">Responder</string>
    <string name="app_logo">App Logo</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="select_state">Select your state</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="error_message">Invalid email or password. Please try again.</string>

    <string-array name="indian_states">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli and Daman and Diu</item>
        <item>Delhi</item>
        <item>Lakshadweep</item>
        <item>Puducherry</item>
        <item>Ladakh</item>
        <item>Jammu and Kashmir</item>
    </string-array>
    <string name="profile_image">Profile Image</string> <!-- Description for profile image -->
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>

</resources>